SPMS-84 Regenerate SDKs
