# swift4/EasyBlockchain/Classes/Swaggers/Models/Chain.swift
@@ -1,0 +1,19 @@
+//
+// Chain.swift
+//
+// Generated by swagger-codegen
+// https://github.com/swagger-api/swagger-codegen
+//
+
+import Foundation
+
+
+/** This is the Chain object itself. A chain is created with a first Entry. The chain Id is calculated from the firt Entry where the content part of the entry is omited during Chain ID calculation. After the chain is stored you can traverse the cahin using the API (not this object) */
+open class Chain: Codable {
+
+    /** The First Entry with which this Chain was created. Traverse the chain using the API (not this object) */
+    public var firstEntry: Entry?
+
+    public init() {}
+
+}
