# swift4/EasyBlockchain/Classes/Swaggers/Models/EntryData.swift
@@ -1,0 +1,21 @@
+//
+// EntryData.swift
+//
+// Generated by swagger-codegen
+// https://github.com/swagger-api/swagger-codegen
+//
+
+import Foundation
+
+
+/** Entry Data contains the actual content and a list of External IDs (metadata) */
+open class EntryData: Codable {
+
+    /** External Ids */
+    public var externalIds: [ExternalId]?
+    /** Content */
+    public var content: Data?
+
+    public init() {}
+
+}
