# swift4/EasyBlockchain/Classes/Swaggers/Models/RpcProvider.swift
@@ -1,0 +1,36 @@
+//
+// RpcProvider.swift
+//
+// Generated by swagger-codegen
+// https://github.com/swagger-api/swagger-codegen
+//
+
+import Foundation
+
+
+/** RpcProvider */
+open class RpcProvider: Codable {
+
+    public enum OwnerType: String, Codable { 
+        case provider = "PROVIDER"
+        case customer = "CUSTOMER"
+    }
+    public enum ModelType: String, Codable { 
+        case api = "API"
+        case wallet = "WALLET"
+    }
+    public var ownerType: OwnerType?
+    public var metaData: [String:String]?
+    public var password: String?
+    public var access: Access?
+    public var ledgerName: String?
+    public var resourceFiles: [String:String]?
+    public var walletInfo: String?
+    public var host: String?
+    public var id: String?
+    public var type: ModelType?
+    public var username: String?
+
+    public init() {}
+
+}
